syntax = "proto3";
package dev.techdozo.product;
import "google/protobuf/any.proto";

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string userId = 4;
}

message CreateProductResponse {
  string productId = 1;
}

message GetProductRequest {
  string productId = 1;
}

message GetProductResponse {
  string name = 1;
  string description = 2;
  double price = 3;
  string userId = 4;
}

message ErrorInfo {
  // Error message
  string message = 1;
  // Additional metadata associated with the Error
  map<string, string> metadata = 2;
}